--- a/assets/sass/core/_mixins.scss
+++ b/assets/sass/core/_mixins.scss
@@ -40,14 +40,14 @@
     cursor: pointer;
     display: inline-block;
     vertical-align: middle;
-    border: 0;
+    border: 2px solid #fff;
     border-radius: $borderRadius;
     background-color: $buttonBgColor;
     color: $buttonFontColor;
     text-transform: uppercase;
     text-align: center;
     font-family: inherit;
-    font-weight: 700;
+    font-weight: bold;
     box-shadow: $shadow;
     @include smooth_animation;
 
@@ -58,12 +58,12 @@
     &:hover {
         color: $buttonFontColorActive;
         background-color: $buttonBgColorActive;
-        box-shadow: none;
+        //box-shadow: none;
     }
 
     &:active {
         background-color: $buttonBgColor;
-        box-shadow: none;
+        //box-shadow: none;
     }
 
     &:focus {
