Some Yegor' changes

--- a/assets/sass/core/_variables.scss
+++ b/assets/sass/core/_variables.scss
@@ -8,7 +8,7 @@ $shadow: 0 0 0 1px #45aaff;
 // BRAND
 $themeColorOne: #304770; // header, menu, footer, title,
 $themeColorTwo: #304770; // menu active item, button, footer link hover, woo
-$themeColorThree: #3498db; // preHeader bg, wooOnSale
+$themeColorThree: #45aaff; // preHeader bg, wooOnSale
 $themeColorFour: #2980b9; //menu hover item, table border, preHeader font
 
 // SELECTION
