--- a/assets/sass/core/_variables.scss
+++ b/assets/sass/core/_variables.scss
@@ -46,7 +46,7 @@ $menuMobileLinkFontSize: 16px;
 $menuMobileSubMenuLinkFontSize: 14px;
 $menuMobileTextColor: #fff;
 $menuMobileSubMenuTextColor: $menuMobileTextColor;
-$menuMobileSubMenuBGOnHover: #ccc;
+$menuMobileSubMenuBGOnHover: #45aaff;
 
 // MENU END
 $hamburger-offset: 8px;
