--- a/assets/sass/blocks/_sidebar.scss
+++ b/assets/sass/blocks/_sidebar.scss
@@ -1,57 +1,57 @@
-.sidebar {
-    .widget_nav_menu {
-        box-shadow: 0 0 46px rgba(#000, .07);
-        padding: 15px;
-
-        .sub-current-menu-item {
+.widget_nav_menu {
+    box-shadow: 0 0 46px rgba(#000, .07);
+    padding: 15px;
+    
+    .sub-current-menu-item {
+        text-decoration: none;
+    }
+    
+    li {
+        &:hover a {
             text-decoration: none;
         }
-
-        li {
-
-            &:hover a {
+    }
+    
+    .menu {
+        list-style: none;
+        
+        .menu-item {
+            a, span {
+                margin-bottom: 3px;
+                display: block;
+                border-bottom: 1px solid lighten($themeColorTwo, 60%);
+                padding-bottom: 2px;
+                font-size: 14px;
                 text-decoration: none;
             }
         }
-
-        .menu {
+        
+        .sub-menu {
+            padding-left: 15px;
             list-style: none;
-
-            .menu-item {
-                a, span {
-                    margin-bottom: 4px;
+            
+            .sub-menu-item {
+                &::before {
+                    content: "\f068";
                     display: block;
-                    border-bottom: 1px solid lighten($themeColorTwo, 30%);
-                    padding-bottom: 4px;
-                    font-size: 14px;
-                    text-decoration: none;
+                    padding: 0 7px 0 0;
+                    font-family: 'Font Awesome 5 Pro';
+                    color: $themeColorTwo;
+                    float: left;
+                    margin-left: 5px;
+                    font-size: 10px;
                 }
             }
-
-            .sub-menu {
-                padding-left: 15px;
-                list-style: none;
-
-                .sub-menu-item {
-
-                    &::before {
-                        content: "\f068";
-                        display: block;
-                        padding: 0 7px 0 0;
-                        font-family: 'Font Awesome 5 Pro';
-                        color: $themeColorTwo;
-                        float: left;
-                        margin-left: 5px;
-                        font-size: 10px;
-                    }
-                }
-
-                .sub-menu-item-has-children {
-                    border: none;
-                }
+            
+            .sub-menu-item-has-children {
+                border: none;
             }
         }
     }
+}
+
+#menu-sidebar-menu {
+    padding-left: 0;
 }
 
 .widget {
